force-app/main/default/objects/Krow__Holiday_Dates__c/Krow__Holiday_Dates__c.object-meta.xml
<CustomObject>
    <label>Holiday Dates</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>