force-app/main/default/objects/Krow__Holiday_Dates__c/fields/Krow__Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Holiday_Schedule__c</fullName>
    <label>Holiday Schedule</label>
    <referenceTo>Krow__Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Holiday Dates</relationshipLabel>
    <relationshipName>Holiday_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>