force-app/main/default/objects/Krow__Holiday_Dates__c/fields/Krow__Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>