force-app/main/default/objects/Krow__Holiday_Dates__c/fields/Needs_Yearly_UpDate__c.field-meta.xml
<CustomField>
    <fullName>Needs_Yearly_UpDate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if it&apos;s unlike April Fool&apos;s Day, April 1st every year</inlineHelpText>
    <label>Needs Yearly UpDate</label>
    <type>Checkbox</type>
</CustomField>